--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,6 +3,45 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-        >
+              android:weightSum="1">
+    <ImageView
+            android:layout_width="234dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView" android:layout_gravity="center_horizontal" android:src="@drawable/ic_launcher"
+            android:layout_weight="0.51"
+            android:layout_marginTop="30dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/email"
+            android:id="@+id/tvEmail"
+            android:layout_marginTop="30dp"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/etEmail"
+            android:layout_marginTop="10dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/password"
+            android:id="@+id/tvPassword"
+            android:layout_marginTop="30dp"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/etPassword"
+            android:layout_marginTop="10dp"/>
+    <Button
+            android:layout_width="107dp"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:id="@+id/bLogin"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"/>
 </LinearLayout>
 
