--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    		  xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="1">
+              android:weightSum="1"
+              tools:context=".HomeActivity">
     <ImageView
             android:layout_width="234dp"
             android:layout_height="wrap_content"
@@ -36,12 +37,12 @@
             android:ems="10"
             android:id="@+id/etPassword"
             android:layout_marginTop="10dp"/>
-    <Button
-            android:layout_width="107dp"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:id="@+id/bLogin"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal"/>
+
+    
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/bSignIn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"/>
 </LinearLayout>
 
