--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     		  xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="fill_parent"
@@ -6,43 +7,20 @@
               android:weightSum="1"
               tools:context=".HomeActivity">
     <ImageView
-            android:layout_width="234dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView" android:layout_gravity="center_horizontal" android:src="@drawable/ic_launcher"
-            android:layout_weight="0.51"
-            android:layout_marginTop="30dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/email"
-            android:id="@+id/tvEmail"
-            android:layout_marginTop="30dp"/>
-    <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/etEmail"
-            android:layout_marginTop="10dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/password"
-            android:id="@+id/tvPassword"
-            android:layout_marginTop="30dp"/>
-    <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/etPassword"
-            android:layout_marginTop="10dp"/>
+        android:layout_width="234dp"
+        android:layout_height="0dp"
+        android:id="@+id/imageView" 
+        android:layout_gravity="center_horizontal" 
+        android:src="@drawable/ic_launcher"
+        android:layout_weight="0.51"
+        android:layout_marginTop="30dp"/>
 
-    
     <com.google.android.gms.common.SignInButton
         android:id="@+id/bSignIn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"/>
-</LinearLayout>
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp" />
 
+</LinearLayout>
