--- a/res/layout/temporary_activity.xml
+++ b/res/layout/temporary_activity.xml
@@ -14,4 +14,13 @@
         android:layout_marginTop="37dp"
         android:text="Create Reminder" />
 
+    <Button
+        android:id="@+id/mapButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/createReminderButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
+        android:text="Map" />
+
 </RelativeLayout>
