--- a/res/layout/create_reminder.xml
+++ b/res/layout/create_reminder.xml
@@ -36,13 +36,38 @@
         android:text="Submit" />
 
     <EditText
+        android:id="@+id/etLatitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/reminderName"
+        android:layout_below="@+id/reminderName"
+        android:ems="10" />
+
+    <EditText
         android:id="@+id/reminderAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/reminderDescription"
-        android:layout_below="@+id/reminderName"
-        android:layout_marginTop="66dp"
+        android:layout_alignRight="@+id/reminderDescription"
+        android:layout_below="@+id/etLongitude"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="81dp"
         android:ems="10"
         android:inputType="textPostalAddress" />
+
+    <EditText
+        android:id="@+id/etLongitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/etLatitude"
+        android:layout_below="@+id/etLatitude"
+        android:ems="10" />
+
+    <Button
+        android:id="@+id/bLatAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bCreateReminderButton"
+        android:layout_below="@+id/reminderDescription"
+        android:text="Button" />
 
 </RelativeLayout>
