--- a/res/layout/temporary_activity.xml
+++ b/res/layout/temporary_activity.xml
@@ -6,16 +6,6 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/createReminderButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="42dp"
-        android:text="Create Reminder" />
-
-    <Button
         android:id="@+id/mapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,5 +14,21 @@
         android:layout_marginLeft="17dp"
         android:layout_toRightOf="@+id/createReminderButton"
         android:text="Map" />
+    
+    <ListView
+        android:id="@+id/reminderList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/mapButton" />
+
+    <Button
+        android:id="@+id/createReminderButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="41dp"
+        android:layout_marginTop="19dp"
+        android:text="Create Reminder" />
 
 </RelativeLayout>
