--- a/res/layout/reminder_list_row.xml
+++ b/res/layout/reminder_list_row.xml
@@ -4,9 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
    
-    <TextView 
+    <TextView
         android:id="@+id/reminder_item"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="5dp"
+        android:textSize="25sp" 
+        android:textColor="#FFFFFF" />
     
 </LinearLayout>
