--- a/res/layout/create_reminder.xml
+++ b/res/layout/create_reminder.xml
@@ -30,14 +30,14 @@
         android:ems="10"
         android:hint="@string/reminder_address"
         android:inputType="textPostalAddress" />
-        
+
     <Button
         android:id="@+id/bCreateReminderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/reminderAddress"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="40dp"        
+        android:layout_marginTop="50dp"
         android:text="@string/reminder_submit" />
 
 </RelativeLayout>
