--- a/res/layout/reminder_list_row.xml
+++ b/res/layout/reminder_list_row.xml
@@ -12,6 +12,7 @@
         android:paddingTop="10dp"
         android:paddingLeft="5dp"
         android:textSize="25sp" 
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:fontFamily="sans-serif-light" />
     
 </LinearLayout>
