--- a/res/layout/temporary_activity.xml
+++ b/res/layout/temporary_activity.xml
@@ -6,6 +6,16 @@
     android:orientation="vertical" >
 
     <Button
+        android:id="@+id/createReminderButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="41dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/create_reminder" />
+    
+    <Button
         android:id="@+id/mapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,23 +23,13 @@
         android:layout_alignBottom="@+id/createReminderButton"
         android:layout_marginLeft="17dp"
         android:layout_toRightOf="@+id/createReminderButton"
-        android:text="Map" />
+        android:text="@string/map" />
     
     <ListView
         android:id="@+id/reminderList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/mapButton"
-        android:paddingTop="20dp" />
-
-    <Button
-        android:id="@+id/createReminderButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="19dp"
-        android:text="Create Reminder" />
+        android:layout_below="@id/mapButton"
+        android:paddingTop="30dp" />
 
 </RelativeLayout>
